# intake-mcp

./: .gitignore  README.md  pyproject.toml
src/intake_mcp/: __init__.py  client.py  server.py
